--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,22 @@
+html {
+    height: 80%;
+}
+
+body, .container, table {
+    height: 100%;
+}
+
+@media only screen and (min-width: 993px) {
+    .container {
+        width: 80%;
+    }
+}
+
+th, td {
+    border-bottom: 1px solid #bdbdbd !important;
+    border-right: 1px solid #bdbdbd !important;
+}
+
 nav object {
     height: 1.8rem;
     pointer-events: none;
