--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,20 +1,12 @@
-html {
-    height: 80%;
-}
-
-body, .container, table {
+html, body {
     height: 100%;
 }
 
-@media only screen and (min-width: 993px) {
-    .container {
-        width: 80%;
-    }
-}
-
-th, td {
-    border-bottom: 1px solid #bdbdbd !important;
-    border-right: 1px solid #bdbdbd !important;
+.container {
+    width: 85%;
+    height: 85%;
+    max-width: 1440px;
+    max-height: 810px;
 }
 
 nav object {
@@ -29,8 +21,8 @@ nav span {
     bottom: 0.2rem;
 }
 
-nav i {
-    font-size: 1.8rem !important;
+nav .button-collapse > i {
+    font-size: 1.8rem;
 }
 
 #login-dialog {
@@ -59,5 +51,5 @@ nav i {
 }
 
 .blue-grey-text.text-lighten-5:hover {
-    color: #263238 !important;
+    color: #263238;
 }
