--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -6,6 +6,10 @@ html, body,
 }
 /* Full height end */
 
+body {
+    background-image: linear-gradient(to bottom, #eceff1 5%, rgba(0, 0, 0, 0) 30%), url(../img/background.svg);
+}
+
 /* Navigation bar start */
 nav object {
     height: 2rem;
