Preparing and introducing AngularJS

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -75,3 +75,6 @@ nav .button-collapse > i {
     }
 }
 /* Content container end */
+.shadow {
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
