--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -50,6 +50,7 @@
     font-size: 1.2rem;
     font-weight: 300;
 }
+
 .class {
     position: absolute;
     padding: 0.5rem 0.5rem 0.7rem 0.7rem;
@@ -81,3 +82,31 @@
     font-weight: 500;
 }
 /* Schedule card end */
+
+#dashboard {
+    color: #fafafa;
+}
+
+#dashboard .card-panel {
+    cursor: pointer;
+    height: 300px;
+}
+
+#dashboard .card-panel:hover {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12), inset 0 0 5rem 1rem rgba(255, 255, 255, 0.1);
+}
+
+
+#dashboard .fa {
+    font-size: 4rem;
+    margin-right: 0.3rem;
+}
+
+#dashboard h4 {
+    display: inline;
+}
+
+#dashboard .fa.fa-graduation-cap {
+    font-size: 3.6rem;
+    margin: 0 0.6rem 0 0.3rem;
+}
