--- a/schedule/static/css/schedule.css
+++ b/schedule/static/css/schedule.css
@@ -7,23 +7,37 @@ nav object {
 /* Side bar start */
 #side-bar {
     width: 60px;
-    height: calc(100% - 64px);
     top: 64px;
     z-index: 1;
 }
 
 #side-bar a {
     height: 60px;
+    line-height: 60px;
     color: #90a4ae;
     font-size: 1.2rem;
     font-weight: 400;
-    line-height: 60px;
 }
 
 #side-bar i {
     line-height: 60px;
     color: #b0bec5;
     font-size: 2rem;
+    margin: 0 24px 0 0;
+}
+
+#side-bar .collapsible-body a {
+    background-color: #161d20;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 16px;
+    font-size: 1rem;
+}
+
+#side-bar .collapsible-body a i {
+    font-size: 1.2rem;
+    margin: 0 12px 0 0;
+    line-height: 48px;
 }
 
 #back, #divider {
@@ -46,20 +60,37 @@ nav object {
 #back i {
     font-size: 1.8rem;
 }
+
+.selected {
+    color: white !important;
+}
+
+.loading {
+    display: none;
+}
 /* Side bar end */
 
-/* Schedule card start */
+#side-bar,
 #container {
+    height: calc(100% - 64px);
+}
+
+/* Schedule card start */
+#schedule {
     margin-left: 60px;
     width: calc(100% - 60px);
-    height: calc(100% - 64px);
-    padding: 0.75rem 0;
+    padding: 1.6rem 0;
     margin-bottom: 0;
 }
 
 .card-panel,
-.col, .day {
+.col, .day,
+#schedule {
     height: 100%;
+}
+
+.row .col {
+    padding: 0 1.6rem;
 }
 
 .card-panel {
