--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,3 +1,4 @@
+/* Dashboard page start */
 #dashboard {
     color: #fafafa;
 }
@@ -25,3 +26,4 @@
     font-size: 3.6rem;
     margin: 0 0.6rem 0 0.3rem;
 }
+/* Dashboard page end */
