--- a/static/css/common.css
+++ b/static/css/common.css
@@ -3,12 +3,9 @@ body {
 }
 
 .md-toolbar-tools a span {
-    font-size: 1.5rem;
-    font-weight: 300;
     color: #fafafa;
     margin-left: 4px;
-    position: relative;
-    top: 4px;
+    vertical-align: middle;
 }
 
 .md-toolbar-tools a b {
@@ -16,53 +13,53 @@ body {
 }
 
 .md-toolbar-tools md-icon {
-    width: 48px;
-    height: 37.5px;
+    width: 55px;
+    height: 32px;
 }
 
 #loginButton {
     margin-right: 0;
 }
 
-.account-dialog {
-  background-color: white;
-  border-radius: 4px;
-  width: 400px;
+.account-panel {
+    background-color: white;
+    border-radius: 4px;
+    width: 400px;
+    height: 300px;
+    overflow: hidden;
 }
 
-.account-dialog form {
-    width: 100%;
-    padding: 8px 26px 26px;
+.account-panel > div > div,
+.account-panel > div {
+    height: inherit;
 }
 
-.account-dialog form md-input-container {
-    margin-top: 24px;
+.account-panel .md-button.md-raised {
+    box-shadow: none;
+    width: 90px;
 }
 
-.account-dialog form label {
-    font-size: 20px;
-    font-weight: 300;
-}
-
-.account-dialog md-checkbox,
-.account-dialog button {
-    margin: 8px 2px 2px;
-}
-
-.account-dialog md-checkbox ._md-label {
-    top: 21%;
+.account-panel md-checkbox ._md-label {
+    top: 22%;
     position: absolute;
-    color: #9e9e9e;
 }
 
-.account-dialog md-toolbar {
+.account-panel md-toolbar {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
 
-.account-dialog md-toolbar span {
-    padding: 0 12px;
-    font-size: 26px;
+.account-panel p {
+    margin: 0 0 8px;
+}
+
+.account-panel p.md-subhead {
+    line-height: 25px;
+}
+
+.account-panel p md-icon {
+    vertical-align: baseline;
+    color: inherit;
 }
 
 md-input-container .hint {
@@ -88,6 +85,40 @@ md-input-container .hint.ng-enter.ng-enter-active {
     opacity: 1;
 }
 
-md-input-container .md-char-counter {
+.account-panel div[ng-switch] > .ng-animate {
+    -webkit-transition: 0.5s linear all;
+	  transition: 0.5s linear all;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.account-panel div[ng-switch] > .ng-enter {
+    left: -500px;
+    opacity: 0;
+}
+
+.account-panel div[ng-switch] > .ng-leave.ng-leave-active {
+    left: 500px;
+    opacity: 0;
+}
+
+.account-panel div[ng-switch] > .ng-leave,
+.account-panel div[ng-switch] > .ng-enter.ng-enter-active {
+    left: 0;
+    opacity: 1;
+}
+
+.grey {
     color: #9e9e9e;
+}
+
+.lighter {
+    font-weight: 300;
+}
+
+.no-margin {
+    margin: 0;
 }
