Bug Fixes and Logic Tweaks
- Avoid URL Error by reloading
- Disable HTML minification in dev mode
- Handle when the selected term is a year
- Fix Angular drawing glitch in schedlue
- Move Google Analysis code to layout
- Fix background image path
- Make the code compatible with updates

--- a/schedule/static/css/schedule.css
+++ b/schedule/static/css/schedule.css
@@ -46,7 +46,6 @@ nav object {
     background-color: #161d20;
     height: 48px;
     line-height: 48px;
-    padding: 0 16px;
     font-size: 1rem;
 }
 
@@ -58,6 +57,10 @@ nav object {
 
 #side-bar .collapsible-body a:hover {
     background-color: #1e282c;
+}
+
+#side-bar a.waves-effect {
+    padding: 0 16px;
 }
 
 #back, #divider {
